slideshowpure.css
@import url(https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap);

.bar-loading {
  z-index: 99999999 !important;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #000;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.bar-loading h1 img {
  opacity: 1;
  display: block;
  z-index: 999999999 !important;
  visibility: visible;
}

.docspinner-loader {
  width: 10px;
  height: 10px;
  margin: 50px auto 0;
  position: relative;
  border-radius: 50%;
  border: 4px solid #fff0;
  border-top-color: #fff;
  animation: spin 1s linear infinite;
  z-index: 999999999 !important;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.backdrop.low-quality {
  filter: blur(0.5px);
  transform: scale(1.01);
  transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
}

.backdrop.high-quality {
  filter: blur(0);
  transform: scale(1);
  transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
}

.logo.low-quality {
  filter: brightness(1) blur(0.5px);
  transition: filter 0.3s ease-in-out;
}

.logo.high-quality {
  filter: brightness(1.1) blur(0);
  transition: filter 0.3s ease-in-out;
}

.homeSectionsContainer {
  position: relative;
  top: 65vh;
  z-index: 6;
}

#slides-container {
  position: relative;
  width: 100vw;
  height: 90%;
  overflow: hidden;
  margin: 0 auto;
}

.arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  font-size: 12px;
  cursor: pointer;
  color: #fff;
  z-index: 5;
  display: flex;
  justify-content: center;
  align-items: center;
}

.left-arrow {
  left: 20px;
  font-size: 12px;
}

.right-arrow {
  right: 20px;
  font-size: 12px;
}

.dots-container {
  position: absolute;
  top: calc(50% + 21vh);
  right: 3%;
  z-index: 5;
  display: flex;
  gap: 5px;
  background-color: #ffffff3d;
  border-radius: 50px;
  justify-content: center;
  align-items: center;
  width: 140px;
  height: 22px;
  transition: opacity 0.5s ease-in-out;
  scale: 0.8;
}

.dot {
  display: inline-block;
  width: 9px;
  height: 9px;
  margin: 0 5px;
  background-color: #cecece;
  border-radius: 50%;
  transition: background-color 0.3s ease-in-out, width 0.5s ease-in-out,
    height 0.5s ease-in-out, border-radius 0.5s ease-in-out;
}

.dot.active {
  width: 22px;
  height: 12px;
  background-color: #fff;
  border-radius: 6px;
}

.slide {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.backdrop-container {
  position: absolute;
  top: 0%;
  right: 0%;
  width: 70%;
  height: 100%;
}

.backdrop {
  right: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center 20%;
  border-radius: 5px;
  z-index: 3;
  mask-image: linear-gradient(to top,
      #fff0 2%,
      rgb(0 0 0 / 0.5) 6%,
      #000000 8%);
  -webkit-mask-image: linear-gradient(to top,
      #fff0 2%,
      rgb(0 0 0 / 0.5) 6%,
      #000000 8%);
}

.backdrop-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0 0 0 / 0.6);
  border-radius: 5px;
  z-index: 4;
  mask-image: linear-gradient(to top,
      #fff0 2%,
      rgb(0 0 0 / 0.5) 6%,
      #000000 8%);
  -webkit-mask-image: linear-gradient(to top,
      #fff0 2%,
      rgb(0 0 0 / 0.5) 6%,
      #000000 8%);
}

.gradient-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 70%;
  height: 100%;
  background: linear-gradient(to right, #000 49%, #fff0 70%);
  z-index: 4;
  mask-image: linear-gradient(to top,
      #fff0 2%,
      rgb(0 0 0 / 0.5) 6%,
      #000000 8%);
  -webkit-mask-image: linear-gradient(to top,
      #fff0 2%,
      rgb(0 0 0 / 0.5) 6%,
      #000000 8%);
}

.logo-container {
  width: 65%;
  height: 40%;
  position: relative;
  display: flex;
  align-items: start;
  z-index: 5;
  top: 15vh;
  left: 4vw;
}

.logo {
  max-height: 70%;
  max-width: 100%;
  height: auto;
  width: auto;
  object-fit: contain;
  filter: brightness(1.5);
}

.plot-container {
  position: absolute;
  bottom: 20vh;
  color: #fff;
  height: 15%;
  width: 90%;
  left: 4vw;
  z-index: 5;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  text-align: justify;
  box-sizing: border-box;
}

.plot {
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.genre {
  position: absolute;
  top: calc(50% + 50px);
  left: 4vw;
  text-align: center;
  color: #fff;
  font-family: "Archivo Narrow", sans-serif;
  z-index: 5;
}

.button-container {
  position: absolute;
  top: calc(50% + 20vh);
  left: 4vw;
  display: flex;
  z-index: 5;
  justify-content: space-between;
  gap: 15px;
}

.play-button,
.detail-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 8px 16px;
  border: solid 2px rgb(12 109 162 / 0.7);
  border-radius: 25px;
  font-size: 14px;
  white-space: nowrap;
  cursor: pointer;
  transition: all 0.3s ease;
  font-weight: 700;
  gap: 6px;
  -webkit-tap-highlight-color: #fff0;
}

.play-button {
  background-color: #0c6da2;
  color: #fff;
}

.detail-button {
  background-color: rgb(12 109 162 / 0.5);
  color: #fff;
}

.play-button:hover,
.detail-button:hover {
  opacity: 0.8;
}

.play-icon,
.detail-icon {
  font-size: 18px;
  display: flex;
  align-items: center;
}

.info-container {
  position: absolute;
  top: calc(50% + 0px);
  display: flex;
  align-items: center;
  justify-content: center;
  left: 4vw;
  color: #fff;
  z-index: 5;
}

.rating-value {
  font-family: "Archivo Narrow", sans-serif;
  display: flex;
  align-items: center;
  z-index: 5;
  position: relative;
}

.runTime {
  font-family: "Archivo Narrow", sans-serif;
  display: flex;
  align-items: center;
  margin-left: 5px;
  margin-right: 5px;
}

.rating-value img {
  margin-right: 5px;
}

.tomato-rating {
  display: flex;
  align-items: center;
  margin-left: 0;
}

.tomato-rating img {
  margin-left: 5px;
}

.age-rating {
  display: flex;
  align-items: center;
  margin-left: 5px;
  margin-right: 5px;
  border-radius: 5px;
  background: rgb(255 255 255 / 0.8);
  color: #000;
  border: none;
  font-weight: 600;
  white-space: nowrap;
  padding: 0 0.6em;
}

.date {
  font-family: "Archivo Narrow", sans-serif;
  font-weight: 500;
  display: flex;
  align-items: center;
  margin-left: 5px;
  margin-right: 5px;
}

.separator-icon {
  margin-left: 5px;
  margin-right: 5px;
  font-size: 10px;
  color: aquamarine;
}

.featured-content {
  display: none;
}

/*Portrait-Modes Phone*/
@media only screen and (max-width: 767px) and (orientation: portrait) {

  .plot-container {
    display: none;
  }

  .backdrop-container {
    position: absolute;
    right: 0%;
    width: 100%;
    height: 100%;
  }

  .backdrop {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 3;
    mask-image: linear-gradient(to top,
        #fff0 2%,
        rgb(0 0 0 / 0.5) 6%,
        #000000 8%);
    -webkit-mask-image: linear-gradient(to top,
        #fff0 2%,
        rgb(0 0 0 / 0.5) 6%,
        #000000 8%);
  }

  .gradient-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgb(0 0 0 / 0.45);
    z-index: 4;
    pointer-events: none;
    mask-image: linear-gradient(to top,
        #fff0 2%,
        rgb(0 0 0 / 0.5) 6%,
        #000000 8%);
    -webkit-mask-image: linear-gradient(to top,
        #fff0 2%,
        rgb(0 0 0 / 0.5) 6%,
        #000000 8%);
  }

  .dots-container {
    left: 50%;
    transform: translateX(-50%) scale(0.55);
    background-color: #ffffff13;
    scale: 1;
  }

  .genre {
    top: calc(50% + 11em);
    left: 50%;
    width: 100%;
    transform: translateX(-50%);
  }

  .info-container {
    top: calc(50% + 8em);
    left: 50%;
    transform: translateX(-50%);
    width: 95%;
  }

  .button-container {
    top: calc(50% + 25vh);
    left: 50%;
    transform: translateX(-50%);
  }

  .logo {
    position: absolute;
    top: 50%;
    left: 50%;
    max-height: 60%;
    max-width: 100%;
    width: auto;
    z-index: 5;
    filter: brightness(1.5);
    transform: translate(-50%, -50%);
    transition: filter 0.3s ease;
  }

  .logo-container {
    width: 75%;
    height: 25%;
    position: relative;
    display: flex;
    align-items: start;
    z-index: 5;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

/*Landscape Mode Phones*/
@media only screen and (max-height: 767px) and (orientation: landscape) {
  #slides-container {
    height: 115%;
  }

  .homeSectionsContainer {
    top: 65vh;
  }

  .button-container {
    left: 3vw;
    scale: 0.95;
  }

  .dots-container {
    scale: 0.6;
  }

  .info-container {
    top: calc(50% + -35px);
  }

  .plot-container {
    bottom: 30vh;
  }

  .genre {
    top: calc(50% + 5px);
}
}

